# uzuki

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: run-tests.yaml
docs/: Doxyfile  annotated.html  classes.html  dir_c664783dcdac7c9daf2e38c3f2c7bfed.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  interfaces_8hpp.html  interfaces_8hpp__incl.map  interfaces_8hpp__incl.md5  interfaces_8hpp_source.html  menudata.js  parse_8hpp.html  parse_8hpp__dep__incl.map  parse_8hpp__dep__incl.md5  parse_8hpp__incl.map  parse_8hpp__incl.md5  parse_8hpp_source.html  structuzuki_1_1Array-members.html  structuzuki_1_1Array.html  structuzuki_1_1Array__coll__graph.map  structuzuki_1_1Array__coll__graph.md5  structuzuki_1_1Array__inherit__graph.map  structuzuki_1_1Array__inherit__graph.md5  structuzuki_1_1Base-members.html  structuzuki_1_1Base.html  structuzuki_1_1Base__inherit__graph.map  structuzuki_1_1Base__inherit__graph.md5  structuzuki_1_1DataFrame-members.html  structuzuki_1_1DataFrame.html  structuzuki_1_1DataFrame__coll__graph.md5  structuzuki_1_1DataFrame__inherit__graph.map  structuzuki_1_1DataFrame__inherit__graph.md5  structuzuki_1_1Factor-members.html  (+63 more)
docs/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  typedefs_5.js  typedefs_6.js
include/uzuki/: Dummy.hpp  interfaces.hpp  parse.hpp  unpack.hpp  validate.hpp
tests/: CMakeLists.txt
tests/src/: load.cpp  test_subclass.h  validate.cpp
